# ibridaDB

./: .async-runner.lock.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  \home\caleb\.cursor-server\data\Machine\settings.json  anthophila_taxonomic_value_summary.txt  ibridaDB_repo-report_export.txt  ibridaDB_v0r2b_export.txt  ibridaDB_v0rX_export.txt  pyproject.toml  requirements.txt  todo-scrap.py
.claude/schemas/: frontmatter.json
artifacts/: anthophila_duplicates_analysis.txt
dbQueries/: clades.md
dbQueries/NA/full/: base.sql  (+2 more)
dbTools/: FLOW.md  README.md  ibridaDB_v0_export.txt  ibridaDB_v0rX_export.txt  schema.md  schema.py
dbTools/admin/: add_annotation_foundations_ddl.sql  add_annotation_geometry_ddl.sql  add_annotation_provenance_quality_ddl.sql  add_annotation_versioning_policy_ddl.sql  add_annotation_write_gate_hardening_ddl.sql  add_media_catalog_ddl.sql  apply_media_catalog_ddl.sh  backup_ibrida_v0r1.sh  ingest_dec2025_r2_stream.sh  load_staging_inat_20250827.sh  post_carryover_elevation.sh  rename_db_to_v0.sh  restore_from_backup.sh  update_repo_refs_after_rename.sh
dbTools/dem/: download_merit.sh  download_merit_parallel.sh
dbTools/ingest/: init.md  init2.md  merge.sql  xMerge.md  xMerge.sh  xMerge.sql
dbTools/taxa/: ColDP_raw_samples.txt  analyze_diff.py  reference.md
dbTools/taxa_expanded/: make.py  model.py  taxa_expanded.md
deprecated/: schema.py
dev/: ancestor_aware.md
dev/CoL/: ColDP_overview.md
dev/active/: CoL_ingest_plan0.md  immediate_ancestor_columns_spec.md
dev/issues/: ISSUE_TEMPLATE.md  ISSUE_TRACKER.md
dev/notes/: why_is_copy_slow.md
dev/stale/: CoL_ingest_plan0.md  ancestor_aware.md  regional_base_reusability.md
diffs/May2024/: L40_analysis.txt  L50_analysis.txt  L60_analysis.txt  active_status_changes.csv  deprecated_taxon_ids.csv
docker/: ._export.txt  Dockerfile  docker-compose.optimized.yml  docker-compose.worm.yml  entrypoint.sh  worm-post-restore.sql
docker/fast/: docker-compose.yml
docker/noPond/: docker-compose.yml
docker/slow/: docker-compose.yml
docker/stausee/: docker-compose.yml  entrypoint.sh  notes.md  postgresql.runtime-tuning.conf
docs/: README.md  annotation_export_policy_matrix.md  annotation_migration_notes.md  coldp_integration.md  elevation_data.md  expanded_taxa.md  expanded_taxa_indexes.md  export.md  ingest.md  roadmap.md  schemas.md  worm-migration-plan.md
docs/sample_data/: README.md
ibridaDB/: schema.py
ibridaDB/ingest/: init.md  merge.md  merge.sql
ibridaDB/taxa/: analysis_utils.py  analyze_diff.py
models/: __init__.py  annotation_models.py  coldp_models.py  expanded_taxa.py  expanded_taxa_cmn.py
preprocess/gbif/: analyze_meta.py  anth_analyze.py
preprocess/generic/: README.md  add_ancestry_to_jsonl.py  dir_to_jsonl.py  rank_name_to_code.py  rekey_position.py
queries/regional/: bases.sql
scripts/: add_immediate_ancestors.py  anthophila_analysis.py  anthophila_duplicate_check.py  anthophila_duplicate_check.sh  build_anthophila_manifest.py  calculate_duplicate_rate.py  check_high_obs_impacts.sql  check_key_clade_impacts.sql  cleanup_duplicate_elevation_indexes.sql  create_taxa_mapping_artifact.sql  create_taxa_mapping_simple.sql  deduplicate_anthophila.py  execute_r1_r2_remapping.sh  fast_pandas_load.py  fast_polars_ingest.py  final_key_clade_check.sql  fix_typus_search_indexes.sql  import_r2_delta.sql  lint_shell_critical.sh  materialize_anthophila_flat.py  orchestrate_anthophila_ingest.sh  quick_duplicate_check.py  r1_r2_remapping_strategy.sql  resolve_anthophila_taxa.py  taxa_impact_analysis.sql  taxa_impact_fast.sql  taxa_obs_impact.sql  taxonomy_preflight_fast.sql  taxonomy_preflight_r2.sql  taxonomy_preflight_r2_report.sql  taxonomy_preflight_r2_simple.sql  test_fast_load.py
scripts/ingest_coldp/: __init__.py  load_tables.py  map_taxa.py  map_taxa_parallel.py  populate_common_names.py  snips.txt  wrapper_ingest_coldp.sh  wrapper_ingest_coldp_parallel.sh
skills/ibridadb-export/: SKILL.md
(+188 files in other folders)
